force-app/main/default/objects/Class_Enrollment__c/Class_Enrollment__c.object-meta.xml
<CustomObject>
    <description>The junction between Student and Class. Students can attend multiple classes, class can be attended by multiple students.</description>
    <label>Class Enrollment</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Class Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>