force-app/main/default/objects/Class_Enrollment__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>Estimation of student&apos;s efforts.</description>
    <label>Grade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>