force-app/main/default/objects/Class_Enrollment__c/fields/Master_Student__c.field-meta.xml
<CustomField>
    <fullName>Master_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the student is a master student for this class.</description>
    <label>Master Student</label>
    <type>Checkbox</type>
</CustomField>