force-app/main/default/objects/Class_Enrollment__c/validationRules/Advanced_Physical_Class_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Advanced_Physical_Class_Requirements</fullName>
    <active>true</active>
    <errorConditionFormula>IF(VALUE(TEXT(Student__r.Year_of_Study__c)) &lt; 3 &amp;&amp;  TEXT( Class__r.Subject__c) = &quot;Physics (Advanced)&quot;, TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Class__c</errorDisplayField>
    <errorMessage>Field Class</errorMessage>
</ValidationRule>