force-app/main/default/objects/Class_Enrollment__c/validationRules/Is_The_Grade_Correct.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_The_Grade_Correct</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Grade__c &lt; 1 || Grade__c &gt; 100, TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Grade__c</errorDisplayField>
    <errorMessage>Field Grade.</errorMessage>
</ValidationRule>